--- a/css/style.css
+++ b/css/style.css
@@ -1,298 +1,307 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 .uno {
-text-align: center;
-padding-top: 15px;
+  text-align: center;
+  padding-top: 15px;
 }
 .dos {
-    text-align: center;
-    padding-bottom: 15px;
-    }
+  text-align: center;
+  padding-bottom: 15px;
+}
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
+}
+header ul {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
 }
 header ul li {
-    display: inline-block;
-    margin: 10px;
-    padding-top: 5px;
-    padding-bottom: 20px;
+  margin: 10px;
+  padding-top: 5px;
+  padding-bottom: 20px;
 }
 .margen {
-    margin: 15px 30px 15px 30px;
+  margin: 15px 30px 15px 30px;
 }
 .tres {
-    text-align: center;
-    margin: 30px 30px 13px 30px;
+  text-align: center;
+  margin: 30px 30px 13px 30px;
 }
 .cuatro {
-    text-align: center;
-    padding-bottom: 30px;
+  text-align: center;
+  padding-bottom: 30px;
 }
-.suscripcion{
-    margin: 0px 0px 10px 0px;
-    font-size: 20px;
+.suscripcion {
+  margin: 0px 0px 10px 0px;
+  font-size: 20px;
 }
 .recibiNovedades {
-    padding-top: 15px;
-    padding-bottom: 80px;
-} 
+  padding-top: 15px;
+  padding-bottom: 80px;
+}
 footer {
-    text-align: center;
-    padding: 15px;
+  text-align: center;
+  padding: 15px;
 }
 .letraNormal {
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: normal;
-    }
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: normal;
+}
 .letraSubtitulos {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-weight: bold;  
-font-size: 35px;  
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  font-size: 35px;
 }
 .letraFooter {
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: small;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: small;
 }
 header nav ul li {
-    color: black
+  color: black;
 }
 .colorBackground {
-    background-color: #fadce8;
+  background-color: #fadce8;
 }
 .imgBack {
-    background-image: url(../assets/img/imgfondo.jpg);
-    display: flex;
-    justify-content: start;
-    align-items: center;
+  background-image: url(../assets/img/imgfondo.jpg);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
-.tamanoChiara img{
-    width: 35%;
+.tamanoChiara img {
+  width: 35%;
 }
-.margenChiara img{
-    margin-left: 200px;
-}
-#bienvenidos{
-    text-align: right;
-    margin-right: 100%;
-}
-.tamanoImg img{
-    width: 19%;
+.tamanoImg img {
+  width: 19%;
 }
 
 i {
-    color: #d37c9f;
-    font-size: 30px;
-    position: fixed;
-    right: 15px;
-    bottom: 5px;
+  color: #d37c9f;
+  font-size: 30px;
+  position: fixed;
+  right: 15px;
+  bottom: 5px;
 }
 .titlePag {
-    font-size: 25px;
-    padding: 0 15px 15px 0
+  font-size: 25px;
+  padding: 0 15px 15px 0;
 }
 .letraSubtitulosSmall {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-font-weight: bold;  
-font-size: 20px;  
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  font-size: 20px;
 }
-
-
-.imgSection{
-    display: flex;
-    justify-content: space-around;
+iframe{
+    border: 0;
+    margin: 1rem;
 }
-.tutoriales{
-    display: flex;
-    justify-content: space-around;
+.imgSection {
+  display: flex;
+  justify-content: space-around;
 }
-.suscribite{
-    padding-top: 110px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+.tutoriales {
+  display: flex;
+  justify-content: space-around;
 }
-.introAbout p{
-text-align: left;
+.suscribite {
+  padding-top: 110px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
-.introAbout img{
-    width: 19%;
+.introAbout p {
+  text-align: left;
 }
-.yo p{
-text-align: right;
-padding: 150px 150px 150px 100px
+.introAbout img {
+  width: 19%;
 }
-.yo img{
-    width: 23%;
-    padding-left: 100px;
+.yo p {
+  text-align: right;
+  padding: 150px 150px 150px 100px;
 }
-#gridFotosIntro{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-areas:"imguno imgdos"
+.yo img {
+  width: 35%;
+  padding-left: 100px;
+}
+#gridFotosIntro {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas:
+    "imguno imgdos"
     "imgtres imgcuatro";
 }
-.gridsFotosIntroTab{
-    display: none;
-    grid-template-columns: repeat(1, 1fr);
-grid-template-rows: repeat(4, 1fr);
-grid-template-areas:"imguno"
-"imgdos"
-"imgtres"
-"imgcuatro";
-}
-.imguno{
-    grid-area: imguno;
-    width: 100%;
-}
-.imgdos{
-    grid-area: imgdos;
-    width: 100%;
-}
-.imgtres{
-    grid-area: imgtres;
-    width: 100%;
-}
-.imgcuatro{
-    grid-area: imgcuatro;
-    width: 100%;
-}
-#barraTablet{
-    display: none;
-}
-#imgTablet{
-    display: none;
-}
-#imgMobile{
-    display: none;
-}
-#gridTutorialesTablet{
-    display: none;
-}
-#gridTutorialesMobile{
-    display: none;
-}
-#introTablet{
-    display: none;
-}
-
-
-
-@media screen and (max-width: 768px){
-    #barraDesktop{
-        display: none;
-    }
-    #barraTablet{
-        display: flex;
-        flex-direction: column;
-    }
-    #barraTablet ul{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        list-style: none;
-    }
-    #imgDesktop{
-        display: none;
-    }
-    #imgTablet{
-        display: flex;
-    }
-    #gridTutorialesDesktop{
-        display: none;
-    }
-    #gridTutorialesTablet{
-        display: flex;
-    }
-    #introTablet{
-        display: none;
-    }
-    #gridsFotosIntro{
-        display: none;
-    }
-    #gridFotosIntro{
-        display: none;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-template-areas:"imguno imgdos"
-        "imgtres imgcuatro";
-    }
-    .gridsFotosIntroTab{
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-areas:"imguno"
+.gridsFotosIntroTab {
+  display: none;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-areas:
+    "imguno"
     "imgdos"
     "imgtres"
     "imgcuatro";
-    }
+}
+.imguno {
+  grid-area: imguno;
+  width: 100%;
+}
+.imgdos {
+  grid-area: imgdos;
+  width: 100%;
+}
+.imgtres {
+  grid-area: imgtres;
+  width: 100%;
+}
+.imgcuatro {
+  grid-area: imgcuatro;
+  width: 100%;
+}
+
+#introTablet {
+  display: none;
+}
+.yoMobile{
+    display: none;
+}
+
+@media screen and (max-width: 768px) {
+  header ul {
+    flex-direction: column;
+  }
+  .imgFragancias {
+    display: none;
+  }
+  .imgReviews {
+    display: none;
+  }
+  .tutoriales {
+    flex-wrap: wrap;
+  }
+  .tutoDos {
+    display: none;
+  }
+  #introTablet {
+    display: none;
+  }
+  #gridsFotosIntro {
+    display: none;
+  }
+  #gridFotosIntro {
+    display: none;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+      "imguno imgdos"
+      "imgtres imgcuatro";
+  }
+  .gridsFotosIntroTab {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-areas:
+      "imguno"
+      "imgdos"
+      "imgtres"
+      "imgcuatro";
+  }
+  .yo p {
+    padding: 0;
+    text-align: center;
+  }
+  .yo img {
+    width: 35%;
+    padding: 0%;
+  }
 }
 
 @media screen and (max-width: 420px) {
-    #imgDesktop{
-        display: none;
-    }
-    #imgTablet{
-        display: none;
-    }
-    #imgMobile{
-        display: flex;
-    }
-    #gridTutorialesDesktop{
-        display: none;
-    }
-    #gridTutorialesMobile{
-        display: flex;
-    }
-    #introDesktop{
-        display: none;
-    }
-    .introTablet{
-        display: flex;
-    }
+  .imgFragancias {
+    display: none;
+  }
+  .imgReviews {
+    display: none;
+  }
+  .imgHair {
+    display: none;
+  }
+  .imgSkin {
+    display: none;
+  }
+  .tutoriales {
+    flex-wrap: wrap;
+  }
+  .tutoTres {
+    display: none;
+  }
+  #introDesktop {
+    display: none;
+  }
+  .introTablet {
+    display: flex;
+  }
+  .yo p {
+    padding: 0;
+    text-align: center;
+  }
+  .yo img {
+    display: none;
+  }
+  .yoMobile{
+    display: flex;
+    width: 5%;
+    padding: 5px;
+    justify-content: center;
+  }
 }
 
 /* animaciones transform y transiciones */
 
-.transformSus:hover{
-        transform: scale(2);
-        transition: all 2s;
+.transformSus:hover {
+  transform: scale(2);
+  transition: all 2s;
 }
 
-.containerDiv{
-    margin: 0 auto;
-    padding: 0;
+.containerDiv {
+  margin: 0 auto;
+  padding: 0;
 }
-.centro{
-    margin: 0 auto;
-    padding-bottom: 40px;
+.centro {
+  margin: 0 auto;
+  padding-bottom: 40px;
 }
-.centroCarousel{
-    margin: 0 auto;
+.centroCarousel {
+  margin: 0 auto;
 }
 
-.marginFooter{
-    margin-top: 40px;
+.marginFooter {
+  margin-top: 40px;
 }
 .btn-mod {
-    color: rgb(250, 220, 232);
-    background-color: rgb(240, 74, 140);
-    border-color: rgb(240, 74, 140);
+  color: rgb(250, 220, 232);
+  background-color: #d37c9f;
+  border-color: #d37c9f;
 }
-@media print{
-    nav{
-        display: none;
-    }
+@media print {
+  nav {
+    display: none;
+  }
 }
-h4:hover::after{
-    content: " ♥ ☺";
+h4:hover::after {
+  content: " ♥ ☺";
 }
-h4::selection{
-    background-color: rgb(240, 74, 140);
-    color: white;
+h4::selection {
+  background-color: rgb(240, 74, 140);
+  color: white;
+}
+.textPP{
+    padding-bottom: 5%;
 }
